--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,19 @@
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/normalize';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/variables';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/buttons';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/forms';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/grid';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/input-groups';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/labels';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/navs';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/navbar';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/theme';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/type';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/utilities';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding';
+
 .prompt-display {
   text-align: center;
 
