--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,8 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/type';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/utilities';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/panels';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/list-group';
 
 .prompt-display {
   text-align: center;
